# cuur

./: .gitignore  Cargo.toml  Dockerfile  README.md
.rpm/: cuur.spec
media/markdown/: build.md
scripts/: build
src/: cli.rs  cli_opts.rs  funcs.rs  main.rs  package_managers.rs  structs.rs  test.toml
src/lib/: funcs.rs  structs.rs
tests/: bsd.toml  exec.toml  htop.toml  lnx.toml  pkg.toml  pkg.yml
