[package]
name = "cuur"
version = "0.0.1"
edition = "2021"
authors = ["Efe TUROĞLU <un.known.river.person@gmail.com>"]
license = "GPL-3"
description = "Cuur allows you to write a configuration file to install packages with your system's package manager"
repository = "https://github.com/byTheInK/cuur"

[dependencies]
toml = "0.8"
serde = {version="1.0.218", features=["derive"]}
os_info = "3"
serde_yaml = "0.9.34"
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0.139"

[package.metadata.rpm]
package = "cuur"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
cuur = { path = "/usr/bin/cuur" }
